--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,46 +1,116 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+.aboutContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-sizing: border-box;
+  height: 80vh;
+  width: 100%;
+}
+
+.aboutContainer .aboutVector {
+  width: 70vw;
+  height: 65vh;
+  box-shadow: 5px 10px 25px rgb(80, 87, 106);
+  border-radius: 0px 30px 30px 0;
+}
+
+.aboutContainer .aboutVector img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0px 30px 30px 0;
+}
+
 .AboutBackImage {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    z-index: -9;
+  width: 100vw;
+  height: 85vh;
+  position: relative;
+  z-index: -9;
+}
+
+.AboutBackImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.AboutBackImage .AboutContent {
+  position: absolute;
+  top: 35vh;
+  left: 10vw;
+  color: white;
+  font-size: 55px;
+}
+
+.aboutinfo {
+  padding: 70px;
+  height: 80vh;
+}
+
+.aboutinfo h2 {
+  margin-bottom: 20px;
+}
+
+.aboutinfo h3 {
+  margin-bottom: 20px;
+}
+
+.aboutinfo ul {
+  margin-bottom: 20px;
+}
+
+.aboutinfo p {
+  max-width: 45vw;
+}
+
+@media (max-width: 600px) {
+  .AboutBackImage {
+    height: 40vh;
   }
-  
-  .AboutBackImage img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
+
   .AboutBackImage .AboutContent {
-    position: absolute;
-    top: 20vh;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
+    font-size: 20px;
+    top: 15vh;
+    left: 10px;
   }
-  
+
+  .aboutContainer {
+    height: 75vh;
+  }
+
+  .aboutContainer .aboutVector {
+    display: none;
+  }
+
+
   .aboutinfo {
-    padding: 80px;
+    font-size: 15px;
   }
-  
+
+  .aboutinfo h2 {
+    font-size: 15px;
+    max-width: 80vw;
+    margin-bottom: 15px;
+  }
+
   .aboutinfo h3 {
-    margin-bottom: 20px;
+    font-size: 15px;
+    margin-bottom: 5px;
   }
-  
-  .aboutinfo h4 {
-    margin-bottom: 20px;
-  }
-  
+
   .aboutinfo ul {
-    margin-bottom: 20px;
+    font-size: 15px;
+    padding-left: 15px;
+    margin-bottom: 6px;
   }
+
+  .aboutinfo p {
+    max-width: 80vw;
+    font-size: 13px;
+  }
+}
