--- a/src/components/vacancies/vacancies.css
+++ b/src/components/vacancies/vacancies.css
@@ -16,21 +16,9 @@
     object-fit: cover;
   }
   
-  .VacanciesBackImage .VacanciesContent {
-    position: absolute;
-    top: 20vh;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
-  }
-  
   .VacanciesContainer {
-    width: 100%;
+    width: 1fr;
+    height: 1fr;
     padding: 20px;
   }
   
@@ -38,8 +26,8 @@
     text-align: center;
     border: 1px solid rgba(128, 128, 128, 0.686);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    width: 50vw;
-    height: 10vh;
+    width: 100%;
+    height: 100%;
     margin: 0px auto;
     border-radius: 10px;
   }
@@ -47,12 +35,10 @@
   .VacanciesInfo {
     border: 1px solid rgba(128, 128, 128, 0.686);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    width: 80vw;
-    height: 50vh;
-    margin: 50px auto;
+    width: 1fr;
     border-radius: 10px;
-    padding: 15px;
     overflow: auto;
+    margin: 20px;
   }
   
   .vacinfo {
@@ -61,7 +47,9 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
+    height: 50vh;
+ 
   }
   
   .VacanciesInfo ul {
@@ -71,6 +59,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
     padding: 15px;
     border-radius: 10px;
   }
@@ -78,4 +67,19 @@
   .vacinfo a {
     text-decoration: none;
     color: black;
+  }
+
+
+  @media (max-width: 600px){
+    .VacanciesBackImage {
+      width: 100%;
+      height: 40vh;
+    }
+
+    .VacanciesInfo ul {
+      font-size: 14px;
+    }
+    .VacanciesContainer .VacanciesHeader{
+      width: 1fr;
+    }
   }
