--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: space-around;
   box-sizing: border-box;
-  height: 80vh;
+  height: 100vh;
   width: 100%;
 }
 
@@ -44,9 +44,13 @@
   top: 35vh;
   left: 10vw;
   color: white;
-  font-size: 55px;
+  font-size: 30px;
+  display: flex;
 }
-
+.AboutBackImage .AboutContent a{
+  text-decoration: none;
+  color: white;
+}
 .aboutinfo {
   padding: 70px;
   height: 80vh;
