--- a/src/components/main/threesection/threesection.css
+++ b/src/components/main/threesection/threesection.css
@@ -1,97 +1,95 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-  /* Three Section Started */
-  .threesection h1 {
-    text-align: center;
-    font-size: 55px;
-  }
-  
-  .ThreeSectionCards {
-    display: flex;
-    align-items: center;
-    place-content: center;
-    flex-wrap: wrap;
-    gap: 10px;
-    margin: 15vh 0;
-  }
-  
-  .ExpertiseCards {
-    width: 500px;
-    padding: 25px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    position: relative;
-    background-color: rgb(245, 245, 247);
-    overflow: hidden;
-    transition: 1s;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
-      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-  }
-  
-  /* card  hover start */
-  .ThreeSectionCards:hover .ExpertiseCards {
-    filter: blur(3px);
-    opacity: .5;
-    transform: scale(.98);
-    box-shadow: none;
-  }
-  
-  .ThreeSectionCards:hover .ExpertiseCards:hover {
-    transform: scale(1);
-    filter: blur(0px);
-    opacity: 1;
-    box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
-    background: #00A97F;
-    color: white;
-  }
-  
-  /* card hover ended */
-  .ExpertiseCards:hover {
-    cursor: pointer;
-    transform: translateY(-20px);
-    border: 1px solid rgb(101, 40, 250);
-  }
-  
-  .ExpertiseCards:hover .OneCardFooter h3 {
-    color: rgb(101, 40, 250);
-  }
-  
-  .ExpertiseCards .OneCardHeader {
-    background-color: rgb(101, 40, 250);
-    color: white;
-    width: 70px;
-    height: 25px;
-    text-align: center;
-    position: absolute;
-    top: 0;
-    right: 0;
-    border-radius: 0 10px 0 10px;
-  }
-  
-  .ExpertiseCards .OneCardMain {
-    width: 100%;
-    height: 240px;
-    margin: 20px 0;
-    padding: 40px 100px;
-    box-sizing: border-box;
-  }
-  
-  .ExpertiseCards .OneCardMain img {
-    width: 200px;
-    height: 200px;
-  }
-  
-  .ExpertiseCards .OneCardFooter {
-    width: 100%;
-    height: 155px;
-    text-align: center;
-  }
-  
-  .ExpertiseCards .OneCardFooter h3 {
-    transition: 1s;
-  }
+.wedowhats {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wedowhat {
+  text-align: center;
+  background-color: rgba(169, 169, 169, 0.486);
+  width: fit-content;
+  border-radius: 15px;
+  width: 120px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgba(0, 0, 0, 0.799);
+}
+
+/* Three Section Started */
+.threesection h1 {
+  text-align: center;
+  font-size: 55px;
+}
+
+.ThreeSectionCards {
+  display: flex;
+  align-items: center;
+  place-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 15vh 0;
+}
+
+.ExpertiseCards {
+  width: 500px;
+  padding: 25px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  position: relative;
+  background-color: rgb(245, 245, 247);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    transition: 0.5s;
+}
+.ExpertiseCards:hover{
+  cursor: pointer;
+  transform: translateY(-30px);
+}
+.ExpertiseCards:hover .OneCardFooter h3 {
+  color: rgb(101, 40, 250);
+}
+
+.ExpertiseCards .OneCardHeader {
+  background-color: rgb(101, 40, 250);
+  color: white;
+  width: 70px;
+  height: 25px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0 10px 0 10px;
+}
+
+.ExpertiseCards .OneCardMain {
+  width: 100%;
+  height: 240px;
+  margin: 20px 0;
+  padding: 40px 100px;
+  box-sizing: border-box;
+}
+
+.ExpertiseCards .OneCardMain img {
+  width: 200px;
+  height: 200px;
+}
+
+.ExpertiseCards .OneCardFooter {
+  width: 100%;
+  height: 155px;
+  text-align: center;
+}
+
+.ExpertiseCards .OneCardFooter h3 {
+  transition: 1s;
+}
