--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,236 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-.ContactBackImage {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    z-index: -9;
-  }
-  
-  .ContactBackImage img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .ContactBackImage .ContactContent {
-    position: absolute;
-    top: 20vh;
-    width: 100%;
-    height: 100%;
+.Sides {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  width: 100%;
+  padding: 60px;
+}
+@media (max-width: 640px){
+  .Sides{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
   }
-  
-  .Sides {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    width: 100%;
-    padding: 60px;
-  }
-  
-  /* Contact LeftSide Started*/
-  .ContactLeftContainer {
-    padding: 20px;
-    border-radius: 10px;
-  }
-  
-  .ContactLeftContainer button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .Info {
-    margin-top: 20px;
-  }
-  
-  .Info h1 {
-    font-size: 38px;
-    margin-bottom: 10px;
-    display: flex;
-    gap: 10px;
-  }
-  
-  .Info h1 h1 {
-    color: #4CAF50;
-  }
-  
-  .Info p {
-    font-size: 16px;
-    margin-bottom: 20px;
-    max-width: 35vw;
-  }
-  
-  .InfoOne {
-    display: flex;
-    gap: 80px;
-    margin-top: 20px;
-  }
-  
-  .InfoTwo {
-    display: flex;
-    gap: 206px;
-    margin-top: 20px;
-  }
-  
-  .adressbar {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    cursor: pointer;
-  }
-  
-  .adressbar:hover .buttons {
-    background-color: orange;
-  }
-  
-  .adressbar .adres h3 {
-    transition: 0.6s;
-  }
-  
-  .adressbar:hover .adres h3 {
-    color: orange;
-  }
-  
-  .adressbar .buttons {
-    background-color: #4CAF50;
-    color: white;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 15px;
-    margin-right: 6px;
-    transition: 0.6s;
-  }
-  
-  .adress h3 {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-  
-  .adress p {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .Map {
-    margin-top: 20px;
-    border-radius: 10px;
-    box-shadow: 1px 10px 25px gray;
-  }
-  
-  /* Contact RightSide Started */
-  .ContactRightContainer {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #f9f9f9;
-  }
-  
-  .NameCompany {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .EmailPhone {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .ContactRightContainer label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  .ContactRightContainer input[type="text"] {
-    width: 20vw;
-    height: 60px;
-    padding: 8px;
-    border: none;
-    background-color: transparent;
-    font-size: 20px;
-  }
-  
-  .ContactRightContainer input[type="email"] {
-    width: 100%;
-    padding: 8px;
-    border: none;
-    background-color: transparent;
-    width: 20vw;
-    height: 60px;
-    font-size: 20px;
-  }
-  
-  .ContactRightContainer textarea {
-    resize: none;
-    padding: 8px;
-    border: none;
-    background-color: transparent;
-    font-size: 20px;
-    width: 41vw;
-  }
-  
-  .ContactRightContainer select {
-    width: 40vw;
-    height: 60px;
-    padding: 8px;
-    border: none;
-    background-color: transparent;
-    font-size: 20px;
-  }
-  
-  .ContactRightContainer input[type="email"]:focus {
-    outline: none;
-    border: none;
-    background-color: transparent;
-  }
-  
-  .ContactRightContainer input[type="text"]:focus,
-  .ContactRightContainer textarea:focus,
-  .ContactRightContainer select:focus {
-    outline: none;
-    border: none;
-    background-color: transparent;
-  }
-  
-  .ContactRightContainer hr {
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
-    margin: 10px 0;
-  }
-  
-  .ContactRightContainer .consultationbutton {
-    background-color: #4CAF50;
-    color: white;
-    width: 41vw;
-    height: 60px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 26px;
-  }
-  
-  .ContactRightContainer .consultationbutton:hover {
-    background-color: #45a049;
-    cursor: pointer;
-  }
-  
+}
