--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,6 +12,7 @@
     align-items: center;
     padding: 15px;
     background-color: rgb(246, 247, 248);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .timer {
@@ -208,7 +209,7 @@ header hr {
     overflow: hidden;
     cursor: pointer;
     transition: .5s;
-    font-weight: 400;
+    font-weight: bold;
     font-size: 17px;
     border: 1px solid;
     font-family: inherit;
