--- a/src/components/main/twosection/twosection.css
+++ b/src/components/main/twosection/twosection.css
@@ -29,6 +29,7 @@
 	justify-content: space-around; /* Adjust as needed */
 	min-width: 200%; /* Adjust based on number of slides */
 	position: absolute;
+	gap: 60px;
 	top: 0;
 	left: 0;
 	width: auto; /* Adjust width as needed */
